<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.automation.testing</groupId>
    <artifactId>automation-testing-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>

        <selenium.version>4.8.1</selenium.version>
        <lombok.version>1.18.20</lombok.version>
        <testng.version>7.8.0</testng.version>
        <junit-jupiter-api.version>5.9.2</junit-jupiter-api.version>
        <junit-jupiter-engine.version>5.9.2</junit-jupiter-engine.version>
        <commons-io.version>2.4</commons-io.version>
        <webdrivermanager.version>5.5.3</webdrivermanager.version>
        <slf4j-api.version>1.7.5</slf4j-api.version>
        <slf4j-log4j12.version>1.7.2</slf4j-log4j12.version>
        <allure-testng.version>2.24.0</allure-testng.version>
        <configuration.version>1.6</configuration.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <aspectjweaver.version>1.9.7</aspectjweaver.version>
        <allure-maven.version>2.10.0</allure-maven.version>
        <org.eclipse.jgit.version>6.6.1.202309021850-r</org.eclipse.jgit.version>
        <org.eclipse.jgit.ssh.jsch.version>6.6.1.202309021850-r</org.eclipse.jgit.ssh.jsch.version>
        <httpclient.version>4.5.13</httpclient.version>
        <owner.version>1.0.12</owner.version>
        <testSuitePath>src\test\java\TestSuites\</testSuitePath>
        <base.url>http://zero.webappsecurity.com/</base.url>
        <driver.version>116.0.5845.96</driver.version>
        <browser.type>chrome</browser.type>
        <git.token></git.token>
        <ai.token></ai.token>
    </properties>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <systemProperties>
                        <property>
                            <name>token</name>
                            <value>${git.token}</value>
                        </property>
                    </systemProperties>
                    <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
                        -Xmx1024m
                    </argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectjweaver.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
                <configuration>
                    <reportVersion>2.13.8</reportVersion>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0.0</version>
                <executions>
                    <execution>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>write-project-properties</goal>
                        </goals>
                        <configuration>
                            <outputFile>my.properties</outputFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/ai-automation-testing-team/*</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>Env1</id>
            <activation>
                <property>
                    <name>profile</name>
                    <value>chrome</value>
                </property>
            </activation>
            <properties>
                <base.url>http://zero.webappsecurity.com/</base.url>
                <browser.type>chrome</browser.type>
            </properties>
        </profile>
        <profile>
            <id>Env3</id>
            <activation>
                <property>
                    <name>profile</name>
                    <value>chrome-headless</value>
                </property>
            </activation>
            <properties>
                <base.url>http://zero.webappsecurity.com/</base.url>
                <browser.type>chrome-headless</browser.type>
            </properties>
        </profile>
    </profiles>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.theokanning.openai-gpt3-java</groupId>
                <artifactId>service</artifactId>
                <version>0.16.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>


        <dependency>
            <groupId>org.ai.automation</groupId>
            <artifactId>ai-in-test-automation</artifactId>
            <version>0.0.7</version>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j-log4j12.version}</version>
        </dependency>

        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-testng.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>${org.eclipse.jgit.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
            <version>${org.eclipse.jgit.ssh.jsch.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>

        <dependency>
            <groupId>org.aeonbits.owner</groupId>
            <artifactId>owner</artifactId>
            <version>${owner.version}</version>
        </dependency>
    </dependencies>

</project>
